# geewerscontrolroom

./: README.md  package-lock.json  package.json
src/: app.css  i18n.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/locales/: en.json  fr.json
src/routes/: +layout.svelte  +page.svelte
