[package]
name = "geewer-hw-monitor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"

[features]
# by default Tauri runs in production mode
# when `tauri dev` is run it is executed with `debug` feature
custom-protocol = ["tauri/custom-protocol"]
